--- a/fuck.css
+++ b/fuck.css
@@ -20,8 +20,7 @@ body {
 
 .box {
   background-color:#f7f4f4;
-  margin: 2vh;
-  border : 1vh solid #f7f4f4;
+  margin: 0 0 5vh 0;
 }
 
 .box-header {
